# fifa-rivalry-tracker

./: .cursor-rules.yaml  .gitignore  AUTHENTICATION.md  CONFIGURATION.md  Dockerfile  ELO_IMPLEMENTATION.md  GOOGLE_OAUTH_SETUP.md  LAST_TEAMS_FEATURE.md  NAME_MIGRATION_README.md  README.md  conftest.py  create_admin_user.py  docker-compose-rpi.yaml  docker-compose-standard.yaml  docker-compose.yaml  docker-compose.yml  drop_database.py  env.example  main.py  pyproject.toml  requirements.txt  test_connection.py
.github/workflows/: deploy.yml  setup-nginx.yml
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  matches.py  players.py  stats.py  tournaments.py  user.py
app/models/: __init__.py  auth.py  match.py  player.py  tournament.py  user.py
app/tests/: test_matches.py  test_players.py  test_stats.py
app/utils/: auth.py  google_oauth.py  helpers.py  logging.py
backend/: Dockerfile  conftest.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: matches.py  players.py  tournaments.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: matches.py  stats.py
backend/app/config/: settings.py
backend/app/core/: database.py
backend/app/models/: match.py  player.py
backend/app/schemas/: match.py  player.py  tournament.py
backend/app/tests/: test_players.py  test_tournaments.py
backend/app/utils/: helpers.py
backend/certs/: cert.pem  key.pem
frontend/: Dockerfile  app.py  pyproject.toml
scripts/: create_admin_user.py  create_rivalry_users.py  drop_database.py  goal_difference_backport.py  test_cors.py
