[project]
name = "fifa-tracker-backend"
version = "0.1.0"
description = "FIFA Rivalry Tracker Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "motor>=3.5.1",
    "pymongo>=4.0.1",
    "pydantic>=2.6.4",
    "python-dotenv>=1.0.1",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
