[tool.poetry]
name = "fifa-rivalry-tracker"
version = "0.1.0"
description = "A FastAPI backend for tracking FIFA matches and player statistics"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.2"
motor = "^3.3.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
