[tool.poetry]
name = "fifa-tracker-backend"
version = "0.1.0"
description = ""
authors = ["Ankush Malaker <43288948+AnkushMalaker@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
motor = "^3.5.1"
pymongo = "^4.0.1"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
