[tool.poetry]
name = "fifa-tracker-frontend"
version = "0.1.0"
description = ""
authors = ["Ankush Malaker <43288948+AnkushMalaker@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
requests = "^2.32.3"
pandas = "^2.2.2"
plotly = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
